--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,4 +52,39 @@ spring:
             - email
             - public_profile
             
+          naver:
+            client-id: XgN8C6jAPryNju9ff150
+            client-secret: JOXJYCdkP4
+            scope:
+            - id
+            - email
+            - name
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            client-name: Naver
+            
+          kakao:
+            client-id:  adb8b28951c28d08c25745819617fc29
+            client-secret: MZyrtHltBPwnBlMfnmgxbyR2JB6cYNy9
+            scope:
+            - account_email
+            - profile
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            client-name: Kakao
+            client-authentication-method: POST
+            
+            
+        provider:
+          naver:
+            authorization-uri:  https://nid.naver.com/oauth2.0/authorize
+            token-uri:  https://nid.naver.com/oauth2.0/token
+            user-info-uri:  https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+
+          kakao:
+            authorization-uri:  https://kauth.kakao.com/oauth/authorize
+            token-uri:  https://kauth.kakao.com/oauth/token
+            user-info-uri:  https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
           
